--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     font-size: 50px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-top: 40px;
+    color:red;
 }
+
 .icecream1 {
     margin: 10px 250px;
     font-size: large;
@@ -14,8 +16,3 @@
     border-radius: 10px 10px 0 0;
 }
 
-.creammy {
-    font-size: 35px;
-    margin-left: 10px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-}
