--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-top: 40px;
     color:red;
+    background-color: antiquewhite;
 }
 
 .icecream1 {
