--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
+body {
+     background: linear-gradient(to bottom left, #ADD8E6, #FFC0CB);
+     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;      
+}
+
+
 .heading1 {
     margin-left: 150px;
+    margin-right: 150px;
+    text-align: center;
     font-size: 50px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-top: 40px;
-    color:red;
+    color:rgb(1, 0, 15);
     background-color: antiquewhite;
+    border:1px solid black;
+}
+
+.randomdiv{
+    font-weight: bold;
 }
 
 .icecream1 {
@@ -18,5 +33,127 @@
     align-items:center;
     margin:auto;
     display:block;
+}
+
+@keyframes cremanimation {
+  0%   { transform: translateX(0); }
+  50%  { transform: translateX(1650px); }
+  100% { transform: translateX(0); }  
+}
+
+@keyframes cremanimation2 {
+  0%   { transform: translateX(0); }
+  50%  { transform: translateX(-1850px); }
+  100% { transform: translateX(0); }  
+}
+
+
+.gridddddddd{
+    display: grid;
+    grid-template-columns: 300px 300px; 
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+        "a b"
+        "a c";
+    gap: 15px;
+    margin: 10px 10px 10px 50px;
+    width: fit-content;
+    background-color: #ffc6c6;
+    border-radius: 20px;
+    padding: 20px;
+    border: 1px black solid;
+    animation: cremanimation  10s ease-in-out infinite;
+}
+
+.asdasdasd{
+    margin: 20px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.cremname1{
+    grid-area: b;
+    background-color: rgb(189, 187, 167);
+    padding: 50px;
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: larger;
+        border: 1px solid black; 
+        border-radius: 20px;
+}
+
+.cremdesc1 {
+    grid-area: c;
+    background-color: rgb(134, 237, 255);
+    padding: 30px;
+    text-align: center;
+    height: auto;
+    border: 1px solid black; 
+        border-radius: 20px;
+}
+
+.image4 {
+    grid-area: a;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black; 
+        border-radius: 20px;
+        overflow: hidden;
+}
+
+.image4 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-fit: cover;
+}
+
+
+.gridddddddd2{
+    display: grid;
+    grid-template-columns: 300px 300px; 
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+        "b a"
+        "c a";
+    gap: 15px;
+    margin: 10px 10px 10px 1850px;
+    width: fit-content;
+    background-color: #c4ffc2;
+    border-radius: 20px;
+    padding: 20px;
+    border: 1px black solid;
+    animation: cremanimation2  10s ease-in-out infinite;
+}
+
+
+.cremname2{
+    grid-area: b;
+    background-color: rgb(206, 181, 72);
+    padding: 50px;
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: larger;
+        border: 1px solid black; 
+        border-radius: 20px;
+}
+
+.cremdesc2 {
+    grid-area: c;
+    background-color: rgb(51, 140, 212);
+    padding: 30px;
+    text-align: center;
+    height: auto;
+    border: 1px solid black; 
+        border-radius: 20px;
+}
+
+@media (max-width:1300px) {
+    body {
+     background: linear-gradient(to bottom left, #004055, #630313);
+}
+body p, h1 {
+    color:white;
+}
 }
 
